Added some styles.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
     </div>
 </section>
+<footer>
+    <p>KusalJS &copy; 2024. All rights reserved.</p>
+</footer>
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
 <script src="script.js"></script>
 </body>
